--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "html2canvas": "^1.4.1",
+    "jsqr": "^1.4.0",
     "qr-scanner": "^1.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
