--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@blackbox-vision/react-qr-reader": "^5.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@google-cloud/text-to-speech": "^4.0.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "jsqr": "^1.4.0",
